--- a/youtube.css
+++ b/youtube.css
@@ -357,7 +357,7 @@ ytd-playlist-panel-renderer#playlist > #container{
 }
 
 /* Fazer com que a header suma quanto a altura da tela estiver pequena */
-@media screen and (max-height: 600px){
+@media screen and (max-height: 37.5em){
   #masthead-container{
     filter: opacity(0%);
     transition-duration: 0.3s;
@@ -434,7 +434,7 @@ ytd-two-column-browse-results-renderer[page-subtype="playlist"] #primary{
 
 /* BIBLIOTECA */
 /* Título da playlist na biblioteca */
-#video-title.ytd-grid-playlist-renderer,.yt-lockup-metadata-view-model-wiz__title span{
+#video-title.ytd-grid-playlist-renderer, .yt-lockup-metadata-view-model-wiz__title span{
   font-family: Calibri;
   text-shadow: 0px 0px 2px black;
   filter: drop-shadow(0px 0px 3px var(--sombra));
