--- a/youtube.css
+++ b/youtube.css
@@ -360,31 +360,22 @@ ytd-playlist-panel-renderer#playlist > #container{
 /* Fazer com que a header suma quanto a altura da tela estiver pequena */
 @media screen and (max-height: 37.5em){
   #masthead-container{
-    filter: opacity(0%);
     transition-duration: 0.3s;
     transition-property: filter !important;
   }
-  #masthead-container:hover{
-    filter: opacity(100%);
+  /* Quando a header não tiver com hover e não tiver o searchbox com focus */
+  #masthead-container:not(:has(~ tp-yt-app-drawer[opened])):not(:hover):not(:has(ytd-searchbox[has-focus])){
+    filter: opacity(0%);
   }
   ytd-page-manager#page-manager{
     transition-duration: 0.3s;
     transition-property: margin-top;
   }
-  #masthead-container:not(:hover) ~ ytd-page-manager#page-manager{
+  #masthead-container:not(:has(~ tp-yt-app-drawer[opened])):not(:hover):not(:has(ytd-searchbox[has-focus])) ~ ytd-page-manager#page-manager{
     margin-top: 0px !important;
   }
   ytd-watch-flexy[flexy] #player-container.ytd-watch-flexy {
     top: -10px !important; 
-  }
-  /* Barra lateral */
-  tp-yt-app-drawer #guide-content{
-    margin-top: -50px !important;
-    transition-duration: 0.3s;
-    transition-property: margin-top;
-  }
-  #masthead-container:hover ~ tp-yt-app-drawer #guide-content{
-    margin-top: 0px !important;
   }
   #header ytd-feed-filter-chip-bar-renderer{
     display: none;
@@ -392,9 +383,9 @@ ytd-playlist-panel-renderer#playlist > #container{
   #masthead-container:not(:hover) ~ ytd-page-manager tp-yt-app-header{
     --ytd-toolbar-offset: 0px !important;
   }
-  tp-yt-app-header tp-yt-app-toolbar{
+ /*  tp-yt-app-header:not([style="left: 0px; right: 0px; transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;"]) tp-yt-app-toolbar{
     display: none;
-  }
+  } */
 }
 
 
